tests/snapshots/examples_fixtures/type_system__01_typed_let_and_functions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/01_typed_let_and_functions.flx
== compile ==
failed (parse)
== diagnostics ==
error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/01_typed_let_and_functions.flx:2:21
  |
2 | let label: String = "The answer
  |                     ^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.


error[E034]: Missing Type Annotation Colon

Missing `:` in let binding type annotation. Write it as `point: Type`.

  examples/type_system/01_typed_let_and_functions.flx:3:11
  |
3 | let point (Int, Int) = (10, 20)
  |           ^

Hint:
  Type annotations use `name: Type`.


error[E034]: Empty String Interpolation

Empty interpolation `#{}` needs an expression between the braces.

  examples/type_system/01_typed_let_and_functions.flx:11:14
   |
11 |     "Point(#{}, #{y})"
   |              ^

Hint:
  Interpolation segments use `#{expr}` inside strings.

Note:
  while parsing function `distance_tag`


error[E076]: Missing Closing Delimiter

Expected a closing `}` to match this opening `{` in function `main`.

  examples/type_system/01_typed_let_and_functions.flx:14:18
   |
14 | fn main() with I {
   |                  ^

Note:
  while parsing function `main`

Help:
  Add `}` to close the body of function `main`.

Found 4 errors.
== stdout ==
<not executed>
