tests/snapshots/examples_fixtures/type_system__02_effect_signatures.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/02_effect_signatures.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
