tests/snapshots/examples_fixtures/type_system__04_boundary_first_contract_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/04_boundary_first_contract_style.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode call target binding
== stdout ==
<not executed>
