tests/snapshots/examples_fixtures/type_system__06_higher_order_typed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/06_higher_order_typed.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
