tests/snapshots/examples_fixtures/type_system__09_static_propagation_success.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/09_static_propagation_success.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
