tests/snapshots/examples_fixtures/type_system__100_effect_row_order_equivalence_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/100_effect_row_order_equivalence_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
