tests/snapshots/examples_fixtures/type_system__101_effect_row_subtract_concrete_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/101_effect_row_subtract_concrete_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
