tests/snapshots/examples_fixtures/type_system__11_adt_basic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/11_adt_basic.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/11_adt_basic.flx:27:1
   |
27 | print(describe(c))
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/11_adt_basic.flx:27:1
   |
27 | print(describe(c))
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/11_adt_basic.flx:28:1
   |
28 | print(describe(r))
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/11_adt_basic.flx:29:1
   |
29 | print(describe(p))
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/11_adt_basic.flx:30:1
   |
30 | print("Area of circle: #{area(c)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/11_adt_basic.flx:31:1
   |
31 | print("Area of rectangle: #{area(r)}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 6 errors.
== stdout ==
<not executed>
